# sirsimulation

./: CHANGELOG.md  LICENSE  Main.hs  README.md  hie.yaml  sirsimulation.cabal
client/: .env  README.md  package.json
client/src/: App.js  index.css  index.js  styles.js
client/src/components/: MA.js  StateMap.js  data.json
