cabal-version:       >=1.10
name:                sirsimulation
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Shae Erisson
maintainer:          shae@scannedinavian.com
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md

library
  exposed-modules:     MyLib
  build-depends:       base >=4.13 && <4.14
  hs-source-dirs:      src
  default-language:    Haskell2010

executable sirsimulation
  main-is:             Main.hs
  build-depends:       base >=4.13 && <4.14, sirsimulation
  default-language:    Haskell2010

test-suite sirsimulation-test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             MyLibTest.hs
  build-depends:       base >=4.13 && <4.14
